# crittercoder

./: Cargo.toml  DESIGN.md  README.md
examples/: input_test.rs
resources/: cat.ansi  cat.xcf  mouse.xcf
src/: critter.rs  main.rs  status.rs  stylesheet.rs
